testing/framework/resources/Advanced/Failing/mondrian/query5398.e
Canada	BC	Vancouver
Canada	BC	Victoria
Israel	Israel	Haifa
Israel	Israel	Tel Aviv
Mexico	DF	Mexico City
Mexico	DF	San Andres
Mexico	Guerrero	Acapulco
Mexico	Jalisco	Guadalajara
Mexico	Veracruz	Orizaba
Mexico	Yucatan	Merida
Mexico	Zacatecas	Camacho
Mexico	Zacatecas	Hidalgo
USA	CA	Alameda
USA	CA	Beverly Hills
USA	CA	Los Angeles
USA	CA	San Francisco
USA	OR	Portland
USA	OR	Salem
USA	USA	Washington
USA	WA	Bellingham
USA	WA	Bremerton
USA	WA	Seattle
USA	WA	Spokane
Vatican	Vatican	\N
